# vienna-os

./: .gitignore  LICENSE  README.md
.github/workflows/: publish-sdk.yml
sdk/node/: README.md  package.json  tsconfig.json
sdk/python/: README.md  pyproject.toml
sdk/python/vienna_os/: __init__.py  client.py  errors.py  types.py
vienna-lib/: index.js  index.mjs  package.json  runtime-stub.js
vienna-lib/accounting/: cost-tracker.js
vienna-lib/adapters/: email.js  framework-adapter.js  github.js  openclaw-plugin.js  openclaw.js  slack.js
vienna-lib/agent/: tools.js
vienna-lib/agents/: agent-orchestrator.js  agent-proposal-engine.js  agent-registry.js  constraint-evaluator.js  plan-translator.js
vienna-lib/attestation/: attestation-engine.js
vienna-lib/audit/: emit.d.ts  emit.d.ts.map  emit.js
vienna-lib/commands/: classifier.ts  index.ts  keyword.ts  parser.ts  types.ts
vienna-lib/compliance/: attestation.js  provenance.js
vienna-lib/core/: agent-intent-bridge.js  agent-proposal-schema.js  agent-schema.js  anomaly-schema.js  approval-intelligence.js  approval-manager.d.ts  approval-manager.d.ts.map  approval-manager.js  approval-requirement-normalizer.js  approval-resolution-handler.js  approval-schema.d.ts  approval-schema.d.ts.map  approval-schema.js  approval-state-machine.d.ts  approval-state-machine.d.ts.map  approval-state-machine.js  audit-log.d.ts  audit-log.d.ts.map  audit-log.js  chat-action-bridge.d.ts  chat-action-bridge.d.ts.map  chat-action-bridge.js  crash-recovery-manager.d.ts  crash-recovery-manager.d.ts.map  endpoint-manager.d.ts  (+117 more)
(+270 files in other folders)
