[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vienna-os"
version = "0.1.0"
description = "Vienna OS SDK — The execution kernel for AI agents"
readme = "README.md"
license = "BSL-1.1"
requires-python = ">=3.9"
authors = [{ name = "ai.ventures", email = "admin@ai.ventures" }]
keywords = ["ai", "governance", "agents", "execution-kernel", "warrants"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["httpx>=0.25.0"]

[project.urls]
Homepage = "https://regulator.ai"
Documentation = "https://regulator.ai/docs"
Repository = "https://github.com/risk-ai/vienna-os"
